# Seminar1

./: CMakeLists.txt  main.cpp
include/: Student.h  StudentGroup.h
src/: Student.cpp  StudentGroup.cpp
